# searchx

./: .gitignore  Cargo.toml
src/: api.rs  constants.rs  embedding.rs  error.rs  index.rs  lib.rs  main.rs  manifest.rs  scan.rs  sync.rs  tests.rs
