[package]
name = "searchx"
version = "0.1.0"
edition = "2024"

[dependencies]
http-client = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.46.1", package = "http-client" }
milli = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.46.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
