[package]
name = "searchx"
version = "0.1.0"
edition = "2024"

[lib]
name = "searchx"
path = "src/lib.rs"

[dependencies]
blake3 = "1.8.2"
bumpalo = "3.19.0"
clap = { version = "4.5.40", features = ["derive"] }
http-client = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.46.1", package = "http-client" }
ignore = "0.4.25"
memmap2 = "0.9.9"
milli = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.46.1" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.11"
